# pinprick

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  justfile  lychee.toml  rustfmt.toml
.github/: codecov.yml  dependabot.yml  zizmor.yml
.github/workflows/: audit-actions.yml  bump-cargo-tools.yml  ci.yml  codeql.yml  deploy-site.yml  link-check.yml  pinprick-audit.yml  release.yml  zizmor.yml
audited-actions/: README.md
audited-actions/actions/: attest.json  cache.json  checkout.json  create-github-app-token.json  delete-package-versions.json  deploy-pages.json  download-artifact.json  first-interaction.json  github-script.json  labeler.json  setup-dotnet.json  setup-go.json  setup-java.json  setup-node.json  setup-python.json  stale.json  upload-artifact.json  upload-pages-artifact.json
audited-actions/aws-actions/: configure-aws-credentials.json
audited-actions/codecov/: codecov-action.json  test-results-action.json
audited-actions/docker/: build-push-action.json  login-action.json  setup-buildx-action.json
audited-actions/github/: codeql-action.json
audited-actions/google-github-actions/: auth.json  setup-gcloud.json
audited-actions/hashicorp/: setup-terraform.json
audited-actions/lycheeverse/: lychee-action.json
audited-actions/ruby/: setup-ruby.json
docs/: scoring.md
scripts/: format-release-notes.py
site/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
src/: audit.rs  audit_patterns.rs  audited_actions.rs  auth.rs  config.rs  github.rs  main.rs  output.rs  pin.rs  score.rs  update.rs  workflow.rs
tests/: audit.rs  clean.rs  cli.rs  completions.rs  pin.rs  score.rs  update.rs
(+20 files in other folders)
