[package]
name = "pinprick"
version = "0.2.0"
edition = "2024"
description = "GitHub Actions supply chain security tool"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
regex = "1"
anyhow = "1"
thiserror = "2"
colored = "3"
toml = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
