[package]
name = "pinprick"
version = "0.4.2"
edition = "2024"
rust-version = "1.88"
description = "GitHub Actions supply chain security tool"
license = "AGPL-3.0-only"
repository = "https://github.com/p-linnane/pinprick"
homepage = "https://pinprick.rs"
keywords = ["github-actions", "security", "supply-chain", "sha", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "/.github/",
    "/site/",
    "/scripts/",
]

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
regex = "1"
anyhow = "1"
thiserror = "2"
colored = "3"
toml = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
